# Kautilya

./: .gitignore  README.md  make_banner.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
apps/api/: README.md  pyproject.toml
apps/api/app/: contracts.py  main.py
apps/api/app/adaptive/: __init__.py  adaptive_ui.py
apps/api/app/audit/: audit.db  audit_store.py
apps/api/app/engines/: barrier_twin.py  dcs.py  intervention.py  metrics.py
apps/api/app/ontology/: embedded_graph.py  graph_port.py  reasoning_paths.py  schema.cypher  schema.py  seed.cypher  seed_synthetic.py
apps/api/app/spine/: __init__.py  eligibility.py  explainer.py  explainer_llm.py  graph.py  nba.py  policy_engine.py  retriever.py
apps/api/tests/: conftest.py  test_guardrails.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  mockFixtures.ts  types.ts
apps/web/src/components/: DCSRing.tsx  DemoShell.tsx  ErrorBoundary.tsx  PhoneFrame.tsx  ReasoningPathInspector.tsx
apps/web/src/lib/: adaptive.tsx  format.ts  icons.tsx  motion.ts
apps/web/src/ops/: ActivationView.tsx  AdminView.tsx  BarrierTwinView.tsx  ObservabilityView.tsx  OpsApp.tsx  useOps.ts  widgets.tsx
apps/web/src/persona/: PersonaSwitcher.tsx
apps/web/src/screens/: AIPreferences.tsx  AccountSummary.tsx  BillPay.tsx  FDDetail.tsx  FDList.tsx  Home.tsx  InstaLoan.tsx  Investments.tsx  (+12 more)
docs/: architecture.md  demo_script.md  ontology.md  personas.md  yono_features.md
(+28 files in other folders)
