[project]
name = "yono-adoption-copilot-api"
version = "1.0.0"
description = "YONO Adoption Copilot — Governed Reasoning Spine (FastAPI). SYNTHETIC demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "networkx>=3.3",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]
# flip on only if you want the real-Anthropic explainer (EXPLAINER_BACKEND=anthropic)
llm = [
    "anthropic>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio[asyncio]>=4.14.1",
]
